force-app/main/default/objects/Booking__c/fields/Accommodation_Amount_per_Person_per_Day__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_Amount_per_Person_per_Day__c</fullName>
    <formula>CASE(TEXT(Preferred_Accommodation__c), &quot;Hotel&quot;, 3000,&quot;Guest House&quot;, 4000,&quot;Resort&quot;, 5000,&quot;Villa&quot;, 6000,&quot;Cottage&quot;, 8000,&quot;Luxury Hotel&quot;, 20000,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accommodation Amount per Person per Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>