force-app/main/default/objects/Booking__c/fields/Cancel_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel Confirmation</label>
    <type>Checkbox</type>
</CustomField>