force-app/main/default/objects/Booking__c/fields/Guide_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Guide_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guide Assigned</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Employee__c.Role__c</field>
            <operation>equals</operation>
            <value>Guide</value>
        </filterItems>
        <filterItems>
            <field>Employee__c.Availability_Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>