force-app/main/default/objects/Booking__c/fields/Include_Travel_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Include_Travel_Assistance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Travel Assistance</label>
    <type>Checkbox</type>
</CustomField>