force-app/main/default/objects/Booking__c/fields/Membership_Chosen__c.field-meta.xml
<CustomField>
    <fullName>Membership_Chosen__c</fullName>
    <label>Membership Chosen</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Membership</valueSetName>
    </valueSet>
</CustomField>