force-app/main/default/objects/Booking__c/fields/No_of_Booking_Guests_Info_Available__c.field-meta.xml
<CustomField>
    <fullName>No_of_Booking_Guests_Info_Available__c</fullName>
    <label>No of Booking Guests Info Available</label>
    <summaryForeignKey>BookingGuest__c.Booking__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>