force-app/main/default/objects/Booking__c/fields/Preferred_Accommodation__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Accommodation__c</fullName>
    <label>Preferred Accommodation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Membership_Chosen__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Preferred_Accomodation</valueSetName>
    </valueSet>
</CustomField>