force-app/main/default/objects/Booking__c/fields/Require_Tour_Guide__c.field-meta.xml
<CustomField>
    <fullName>Require_Tour_Guide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Tour Guide</label>
    <type>Checkbox</type>
</CustomField>