force-app/main/default/objects/Booking__c/fields/Require_Visa_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Require_Visa_Assistance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Visa Assistance</label>
    <type>Checkbox</type>
</CustomField>