force-app/main/default/objects/Booking__c/fields/Total_Accommodation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Accommodation_Amount__c</fullName>
    <formula>(Accommodation_Amount_per_Person_per_Day__c  *  Number_of_Travelers__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Accommodation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>