force-app/main/default/objects/Booking__c/fields/Total_Billing_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Billing_Amount__c</fullName>
    <formula>Total_Accommodation_Amount__c +  Total_Travel_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Billing Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>