force-app/main/default/objects/Booking__c/fields/Total_Travel_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Travel_Amount__c</fullName>
    <formula>Number_of_Travelers__c  *  Travel_Cost_Per_Person__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Travel Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>