force-app/main/default/objects/Booking__c/fields/Travel_Cost_Per_Person__c.field-meta.xml
<CustomField>
    <fullName>Travel_Cost_Per_Person__c</fullName>
    <formula>TravelPackage__r.Price_Per_Person__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travel Cost Per Person</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>