force-app/main/default/objects/Booking__c/fields/Travelling_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Travelling_End_Date__c</fullName>
    <formula>Travelling_Start_Date__c  +  TravelPackage__r.Duration_in_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travelling End Date</label>
    <type>Date</type>
</CustomField>