force-app/main/default/objects/Booking__c/fields/Travelling_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Travelling_Start_Date__c</fullName>
    <label>Travelling Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>