force-app/main/default/objects/Booking__c/fields/TravelPackage__c.field-meta.xml
<CustomField>
    <fullName>TravelPackage__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>TravelPackage</label>
    <referenceTo>TravelPackage__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>