force-app/main/default/objects/Booking__c/fields/Trip_Type__c.field-meta.xml
<CustomField>
    <fullName>Trip_Type__c</fullName>
    <label>Trip Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Trip_Type</valueSetName>
    </valueSet>
</CustomField>