force-app/main/default/objects/Booking__c/validationRules/Enforce_Pending_Status_On_Create.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Pending_Status_On_Create</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISNEW(),  NOT(ISPICKVAL( Booking_Status__c , &quot;Pending&quot;)) )</errorConditionFormula>
    <errorDisplayField>Booking_Status__c</errorDisplayField>
    <errorMessage>Booking Status must be &apos;Pending&apos; when a new record is created.</errorMessage>
</ValidationRule>